// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tweetRoutes get /tweets should get a list of tweets 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5d597dbcd9a2fa3e40cbb3f9",
    "comments": 0,
    "date": "2019-08-18T16:33:00.381Z",
    "likes": 0,
    "retweets": 0,
    "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel alias, amet corporis modi corrupti.",
    "type": "text",
    "user": null,
  },
]
`;

exports[`tweetRoutes get /tweets should get a list of tweets 2`] = `
Object {
  "next": null,
  "prev": null,
}
`;

exports[`tweetRoutes get /users/:userId/tweets should get a list of tweets 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5d597dbbd9a2fa3e40cbb3f7",
    "comments": 0,
    "date": "2019-08-18T16:32:59.608Z",
    "likes": 0,
    "retweets": 0,
    "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel alias, amet corporis modi corrupti.",
    "type": "text",
    "user": null,
  },
]
`;

exports[`tweetRoutes get /users/:userId/tweets should get a list of tweets 2`] = `
Object {
  "next": null,
  "prev": null,
}
`;
